--- a/src/pages/pick-shipments-pick/tabs/unpicked-list.html
+++ b/src/pages/pick-shipments-pick/tabs/unpicked-list.html
@@ -7,6 +7,9 @@
 <ion-header>
 
     <ion-navbar>
+        <button ion-button menuToggle>
+            <ion-icon name="menu"></ion-icon>
+        </button>
         <ion-title>Pending Items</ion-title>
     </ion-navbar>
 
@@ -21,16 +24,15 @@
         </ion-row>
         <ion-list class="item-list">
             <ion-item no-margin no-padding class="list-group" *ngFor="let loc of pickProvider.pickList; let i = index" (click)="openPickItem(item);">
-                <ion-row>
+                <ion-row class="item-group-header" no-margin>
                     <ion-col col-7><strong>{{loc.LocationID?.value}}</strong></ion-col>
                     <ion-col col-5></ion-col>
                 </ion-row>
-                <ion-list class="list">
+                <ion-list no-margin no-padding>
                     <ion-item no-margin no-padding class="list-item" tappable *ngFor="let item of loc.Items">
                         <ion-row  no-margin no-padding>
                             <ion-col col-7>{{item.InventoryID?.value}}</ion-col>
-                            <ion-col col-5 class="column-right">{{item.RemainingQty}}
-                            </ion-col>
+                            <ion-col col-5 class="column-right">{{item.RemainingQty}}</ion-col>
                         </ion-row>
                     </ion-item>
                 </ion-list>
@@ -38,3 +40,13 @@
         </ion-list>
     </ion-grid>
 </ion-content>
+<ion-footer no-shadow>
+    <ion-toolbar position="bottom">
+        <ion-row>
+            <ion-col col-12 text-right>
+                <button type="button" ion-button small (click)="cancelPicks()">Cancel All</button>
+                <button type="button" ion-button small (click)="confirmPicks()">Commit</button>
+            </ion-col>
+        </ion-row>
+    </ion-toolbar>
+</ion-footer>
