--- a/src/pages/pick-shipments/pick-shipments.html
+++ b/src/pages/pick-shipments/pick-shipments.html
@@ -16,7 +16,8 @@
                 <ion-label>
                     Shipment #
                 </ion-label>
-                <ion-input name="shipment-number" autofocus type="text" placeholder="" [ngModel]="shipmentNbr" (keyup.enter)="loadShipment($event.target.value)"></ion-input>
+                <ion-input name="shipment-number" autofocus type="text" placeholder="" [ngModel]="shipmentNbr"
+                           (keyup.enter)="loadShipment($event.target.value); $event.stopPropagation();" (keypress)="$event.stopPropagation();"></ion-input>
                 <button type="button" ion-button icon-only item-right (click)="startCameraScanner()">
                     <ion-icon name="barcode"></ion-icon>
                 </button>
